// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetDragAndDrop should display spinner if loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SnippetDragAndDrop
    loading={true}
    snippetOrder={
      Array [
        "jguxf292",
      ]
    }
    snippets={
      Object {
        "jghgygc9": Object {
          "tags": Array [
            Object {
              "id": "jgtv2988",
              "label": "lots",
              "value": "lots",
            },
            Object {
              "id": "jgtv29wa",
              "label": "of",
              "value": "of",
            },
            Object {
              "id": "jgtv1e21",
              "label": "tags",
              "value": "tags",
            },
          ],
          "text": "Praesent aliquet placerat augue in varius. Sed lorem metus, gravida at lectus nec, egestas convallis ex. Suspendisse accumsan quam nec laoreet fermentum. Donec scelerisque in lorem non aliquet. Nunc vestibulum eleifend felis eget dignissim. Integer ullamcorper ipsum ac imperdiet varius. Maecenas cursus egestas neque, quis placerat enim dignissim eu. Integer ultrices aliquam metus eget faucibus. Vivamus lobortis turpis odio, sed sodales odio elementum nec. Mauris facilisis ipsum et ante porta accumsan. Quisque molestie maximus leo, id cursus odio porttitor mattis. Quisque eu porttitor justo. Ut facilisis pretium arcu, eget mollis sem mattis ut.",
          "title": "Section Two",
        },
        "jgux6edn": Object {
          "tags": Array [],
          "text": "e",
          "title": "e",
        },
        "jguxf292": Object {
          "tags": Array [],
          "text": "e",
          "title": "e!!!!????",
        },
        "jgxvm7zr": Object {
          "tags": Array [],
          "text": "yes",
          "title": "yes!",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
      "data-test": "loading",
      "direction": "horizontal",
      "droppableId": "snippetOrder",
      "ignoreContainerClipping": false,
      "isDropDisabled": false,
      "type": "DEFAULT",
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
        "data-test": "loading",
        "direction": "horizontal",
        "droppableId": "snippetOrder",
        "ignoreContainerClipping": false,
        "isDropDisabled": false,
        "type": "DEFAULT",
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SnippetDragAndDrop should render snippet cards when order is given 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SnippetDragAndDrop
    loading={false}
    snippetOrder={
      Array [
        "jguxf292",
      ]
    }
    snippets={
      Object {
        "jghgygc9": Object {
          "tags": Array [
            Object {
              "id": "jgtv2988",
              "label": "lots",
              "value": "lots",
            },
            Object {
              "id": "jgtv29wa",
              "label": "of",
              "value": "of",
            },
            Object {
              "id": "jgtv1e21",
              "label": "tags",
              "value": "tags",
            },
          ],
          "text": "Praesent aliquet placerat augue in varius. Sed lorem metus, gravida at lectus nec, egestas convallis ex. Suspendisse accumsan quam nec laoreet fermentum. Donec scelerisque in lorem non aliquet. Nunc vestibulum eleifend felis eget dignissim. Integer ullamcorper ipsum ac imperdiet varius. Maecenas cursus egestas neque, quis placerat enim dignissim eu. Integer ultrices aliquam metus eget faucibus. Vivamus lobortis turpis odio, sed sodales odio elementum nec. Mauris facilisis ipsum et ante porta accumsan. Quisque molestie maximus leo, id cursus odio porttitor mattis. Quisque eu porttitor justo. Ut facilisis pretium arcu, eget mollis sem mattis ut.",
          "title": "Section Two",
        },
        "jgux6edn": Object {
          "tags": Array [],
          "text": "e",
          "title": "e",
        },
        "jguxf292": Object {
          "tags": Array [],
          "text": "e",
          "title": "e!!!!????",
        },
        "jgxvm7zr": Object {
          "tags": Array [],
          "text": "yes",
          "title": "yes!",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Connect(Droppable)
        direction="horizontal"
        droppableId="snippetOrder"
        ignoreContainerClipping={false}
        isDropDisabled={false}
        type="DEFAULT"
      >
        [Function]
      </Connect(Droppable)>,
      "data-test": "render-order",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
        "direction": "horizontal",
        "droppableId": "snippetOrder",
        "ignoreContainerClipping": false,
        "isDropDisabled": false,
        "type": "DEFAULT",
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Connect(Droppable)
          direction="horizontal"
          droppableId="snippetOrder"
          ignoreContainerClipping={false}
          isDropDisabled={false}
          type="DEFAULT"
        >
          [Function]
        </Connect(Droppable)>,
        "data-test": "render-order",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": [Function],
          "direction": "horizontal",
          "droppableId": "snippetOrder",
          "ignoreContainerClipping": false,
          "isDropDisabled": false,
          "type": "DEFAULT",
        },
        "ref": null,
        "rendered": [Function],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SnippetDragAndDrop should should say CLICK HERE TO ADD SNIPPETS if no order is given 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SnippetDragAndDrop
    loading={false}
    snippetOrder={Array []}
    snippets={
      Object {
        "jghgygc9": Object {
          "tags": Array [
            Object {
              "id": "jgtv2988",
              "label": "lots",
              "value": "lots",
            },
            Object {
              "id": "jgtv29wa",
              "label": "of",
              "value": "of",
            },
            Object {
              "id": "jgtv1e21",
              "label": "tags",
              "value": "tags",
            },
          ],
          "text": "Praesent aliquet placerat augue in varius. Sed lorem metus, gravida at lectus nec, egestas convallis ex. Suspendisse accumsan quam nec laoreet fermentum. Donec scelerisque in lorem non aliquet. Nunc vestibulum eleifend felis eget dignissim. Integer ullamcorper ipsum ac imperdiet varius. Maecenas cursus egestas neque, quis placerat enim dignissim eu. Integer ultrices aliquam metus eget faucibus. Vivamus lobortis turpis odio, sed sodales odio elementum nec. Mauris facilisis ipsum et ante porta accumsan. Quisque molestie maximus leo, id cursus odio porttitor mattis. Quisque eu porttitor justo. Ut facilisis pretium arcu, eget mollis sem mattis ut.",
          "title": "Section Two",
        },
        "jgux6edn": Object {
          "tags": Array [],
          "text": "e",
          "title": "e",
        },
        "jguxf292": Object {
          "tags": Array [],
          "text": "e",
          "title": "e!!!!????",
        },
        "jgxvm7zr": Object {
          "tags": Array [],
          "text": "yes",
          "title": "yes!",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
      "data-test": "no-order",
      "direction": "horizontal",
      "droppableId": "snippetOrder",
      "ignoreContainerClipping": false,
      "isDropDisabled": false,
      "type": "DEFAULT",
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
        "data-test": "no-order",
        "direction": "horizontal",
        "droppableId": "snippetOrder",
        "ignoreContainerClipping": false,
        "isDropDisabled": false,
        "type": "DEFAULT",
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
